[project]
name = "osint-posture"
version = "0.1.0"
description = "Defensive OSINT posture assessment for domains and email security"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "dnspython>=2.6.1",
  "rich>=13.7.1",
]

[project.scripts]
osint-posture = "osint_posture.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.uv]
